added hero section

--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
 <body>
     <nav><a href="#about-me">About Me</a> <a href="#projects">Projects</a> <a href="#contact">Contact</a></nav>
     <main>
+    <!-- Real-time Clock Section -->
+    <section id="clock-section">
+        <div id="clock-container">
+            <span id="current-time">--:--</span>
+            <span id="clock-message">
+                A great time<br>
+                to learn about<br>
+                <span class="name-highlight">Alshayma Alarfaj</span>
+            </span>
+        </div>
+        <div id="hero-image-container">
+            <img id="hero_picture" src="assets/images/my_picture.jpeg" alt="A picture of me">
+        </div>
+    </section>
+    
     <section id = "about-me">
         <h1>Alshayma Alarfaj</h1>
         <hr>
         <br>
         <h1 id="about-me">About Me</h1>
         <div id="intro">
-            <div class="column-half_em">
-                <img id = "my_picture" src = "assets/images/my_picture.jpeg" alt = "A picture of me">
-                <p>Turning ideas into apps people actually enjoy</p>
-            </div>
+            <p>Turning ideas into apps people actually enjoy</p>
             <p id="intro-text">Hello! I am Alshayma Alarfaj, a junior-year computer science student at KFUPM. I love making video games and fun, useful websites in my free time. I know how to make videogames, websites and mobile applications, both the front-end aspect and the backend.</p>
         </div>
     </section>
